--- a/Notebooks/PyGRF_Obesity.ipynb
+++ b/Notebooks/PyGRF_Obesity.ipynb
@@ -20,7 +20,7 @@
    "id": "4cec0cf9-febd-4cd8-ba9a-e32f33305a26",
    "metadata": {},
    "source": [
-    "## Read data and split into training and test sets"
+    "### Read data and split into training and test sets"
    ]
   },
   {
@@ -40,15 +40,51 @@
    "id": "583bb5a3-ee05-42c8-87ba-f03e9cc69a9a",
    "metadata": {},
    "source": [
-    "## Search the optimal bandwidth and local model weight using incremental spatial autocorrelation"
+    "### Search the optimal bandwidth and local model weight using incremental spatial autocorrelation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1dd2ec13-91e6-47bf-b82f-2c629d3548b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\PyGRF\\PyGRF.py:343: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  coords['coordinate'] = coords.apply(lambda row: tuple(row), axis=1)\n",
+      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
+      " There are 410 disconnected components.\n",
+      "  warnings.warn(message)\n",
+      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
+      " There are 16 disconnected components.\n",
+      "  warnings.warn(message)\n",
+      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
+      " There are 4 disconnected components.\n",
+      "  warnings.warn(message)\n",
+      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
+      " There are 2 disconnected components.\n",
+      "  warnings.warn(message)\n",
+      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\esda\\moran.py:220: RuntimeWarning: invalid value encountered in scalar power\n",
+      "  self.seI_norm = self.VI_norm ** (1 / 2.0)\n",
+      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\esda\\moran.py:233: RuntimeWarning: invalid value encountered in scalar power\n",
+      "  self.seI_rand = VIR ** (1 / 2.0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bandwidth: 152, moran's I: 0.44881501000042584, p-value: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "bandwidth, local_weight, p_value = PyGRF.search_bw_lw_ISA(X_train[\"obesity rate\"], X_train[['Lon', 'Lat']])"
    ]
@@ -58,20 +94,24 @@
    "id": "099a2c87-eabb-461e-bb0a-9f88a08ea59c",
    "metadata": {},
    "source": [
-    "## Evaluate performance of PyGRF using 10-fold cross validation"
+    "### Evaluate performance of PyGRF using 10-fold cross validation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cacd28e8-e289-4a73-a006-140ec3f82c10",
+   "id": "7422e41e-ea44-4fda-a958-2133ee7db5e0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# function for standarizing independent variables\n",
+    "def standarize_data(data, stats):\n",
+    "    return (data - stats['mean']) / stats['std']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "45acdf29-64eb-457a-91d7-f8f33e05aea8",
    "metadata": {},
    "outputs": [],
@@ -94,20 +134,20 @@
     "    xy_coord = X_train_all[['Lon', 'Lat']]\n",
     "    coords_test = X_test_all[['Lon', 'Lat']]\n",
     "\n",
-    "    # standarize dependent variables\n",
+    "    # standarize independent variables\n",
     "    training_stat = X_train.describe().transpose()\n",
     "    X_scaled_train = standarize_data(X_train, training_stat)\n",
     "    X_scaled_test = standarize_data(X_test, training_stat)\n",
     "\n",
     "    # create a PyGRF model\n",
-    "    pygrf_obesity = PyGRF.PyGRFBuilder(ntree=400, mtry=1/3, band_width=152, train_weighted=True, predict_weighted=True, bootstrap=False,\n",
+    "    pygrf_obesity = PyGRF.PyGRFBuilder(n_estimators=400, max_features=1/3, band_width=152, train_weighted=True, predict_weighted=True, bootstrap=False,\n",
     "                          resampled=True, random_seed=42)\n",
     "\n",
     "    # fit the model and use it to make predictions\n",
     "    pygrf_obesity.fit(X_scaled_train, y_train, xy_coord)\n",
     "    predict_combined, predict_global, predict_local = pygrf_obesity.predict(X_scaled_test, coords_test, local_weight=0.4488)\n",
     "\n",
-    "    # get the feature importance output by the local models\n",
+    "    # get the feature importance output by local models\n",
     "    local_feature_importance = pygrf_obesity.get_local_feature_importance()\n",
     "    df_feature_importance = pd.concat([df_feature_importance, local_feature_importance])\n",
     "\n",
@@ -117,16 +157,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ef80d05c-bb1c-4cdc-baad-962359e87f1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 1.6341 r2: 0.9229\n"
+     ]
+    }
+   ],
    "source": [
     "# compute the RMSE and r-square\n",
     "rmse = mean_squared_error(y_true, y_predict, squared=False)\n",
     "r2 = r2_score(y_true, y_predict)\n",
     "print(\"rmse: \" + str(round(rmse, 4)), \"r2: \" + str(round(r2, 4)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "38e2a541-2ac9-438c-9cad-50b31d3500a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(17955, 22)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_index</th>\n",
+       "      <th>% Black</th>\n",
+       "      <th>% Ame Indi and AK Native</th>\n",
+       "      <th>% Asian</th>\n",
+       "      <th>% Nati Hawa and Paci Island</th>\n",
+       "      <th>% Hispanic or Latino</th>\n",
+       "      <th>% male</th>\n",
+       "      <th>% married</th>\n",
+       "      <th>% age 18-29</th>\n",
+       "      <th>% age 30-39</th>\n",
+       "      <th>...</th>\n",
+       "      <th>% age &gt;=60</th>\n",
+       "      <th>% &lt;highschool</th>\n",
+       "      <th>median income</th>\n",
+       "      <th>% unemployment</th>\n",
+       "      <th>% below poverty line</th>\n",
+       "      <th>% food stamp/SNAP</th>\n",
+       "      <th>median value units built</th>\n",
+       "      <th>median year units built</th>\n",
+       "      <th>% renter-occupied housing units</th>\n",
+       "      <th>population density</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.311021</td>\n",
+       "      <td>0.002785</td>\n",
+       "      <td>0.210766</td>\n",
+       "      <td>0.000297</td>\n",
+       "      <td>0.024867</td>\n",
+       "      <td>0.004729</td>\n",
+       "      <td>0.088088</td>\n",
+       "      <td>0.004334</td>\n",
+       "      <td>0.010742</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.018941</td>\n",
+       "      <td>0.050142</td>\n",
+       "      <td>0.014501</td>\n",
+       "      <td>0.008568</td>\n",
+       "      <td>0.011491</td>\n",
+       "      <td>0.055468</td>\n",
+       "      <td>0.138184</td>\n",
+       "      <td>0.006007</td>\n",
+       "      <td>0.010586</td>\n",
+       "      <td>0.015362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.326607</td>\n",
+       "      <td>0.004213</td>\n",
+       "      <td>0.097843</td>\n",
+       "      <td>0.000439</td>\n",
+       "      <td>0.034703</td>\n",
+       "      <td>0.005782</td>\n",
+       "      <td>0.030370</td>\n",
+       "      <td>0.006006</td>\n",
+       "      <td>0.008659</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.028549</td>\n",
+       "      <td>0.153190</td>\n",
+       "      <td>0.014234</td>\n",
+       "      <td>0.016159</td>\n",
+       "      <td>0.021930</td>\n",
+       "      <td>0.119729</td>\n",
+       "      <td>0.070204</td>\n",
+       "      <td>0.006140</td>\n",
+       "      <td>0.030484</td>\n",
+       "      <td>0.014300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.315451</td>\n",
+       "      <td>0.003027</td>\n",
+       "      <td>0.188863</td>\n",
+       "      <td>0.000380</td>\n",
+       "      <td>0.022814</td>\n",
+       "      <td>0.004493</td>\n",
+       "      <td>0.046391</td>\n",
+       "      <td>0.005409</td>\n",
+       "      <td>0.007128</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.012401</td>\n",
+       "      <td>0.054442</td>\n",
+       "      <td>0.013475</td>\n",
+       "      <td>0.023643</td>\n",
+       "      <td>0.012675</td>\n",
+       "      <td>0.094314</td>\n",
+       "      <td>0.133486</td>\n",
+       "      <td>0.005514</td>\n",
+       "      <td>0.028606</td>\n",
+       "      <td>0.018284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.318866</td>\n",
+       "      <td>0.003513</td>\n",
+       "      <td>0.147762</td>\n",
+       "      <td>0.001417</td>\n",
+       "      <td>0.030360</td>\n",
+       "      <td>0.003700</td>\n",
+       "      <td>0.087574</td>\n",
+       "      <td>0.005744</td>\n",
+       "      <td>0.013925</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.017146</td>\n",
+       "      <td>0.054844</td>\n",
+       "      <td>0.013198</td>\n",
+       "      <td>0.012265</td>\n",
+       "      <td>0.013483</td>\n",
+       "      <td>0.072873</td>\n",
+       "      <td>0.145519</td>\n",
+       "      <td>0.005182</td>\n",
+       "      <td>0.016203</td>\n",
+       "      <td>0.022448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.311025</td>\n",
+       "      <td>0.003404</td>\n",
+       "      <td>0.179981</td>\n",
+       "      <td>0.000582</td>\n",
+       "      <td>0.029167</td>\n",
+       "      <td>0.003886</td>\n",
+       "      <td>0.057562</td>\n",
+       "      <td>0.009107</td>\n",
+       "      <td>0.007423</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.011285</td>\n",
+       "      <td>0.069788</td>\n",
+       "      <td>0.011834</td>\n",
+       "      <td>0.021366</td>\n",
+       "      <td>0.025068</td>\n",
+       "      <td>0.095424</td>\n",
+       "      <td>0.113794</td>\n",
+       "      <td>0.006453</td>\n",
+       "      <td>0.017810</td>\n",
+       "      <td>0.009728</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  model_index   % Black  % Ame Indi and AK Native   % Asian  \\\n",
+       "0           0  0.311021                  0.002785  0.210766   \n",
+       "1           1  0.326607                  0.004213  0.097843   \n",
+       "2           2  0.315451                  0.003027  0.188863   \n",
+       "3           3  0.318866                  0.003513  0.147762   \n",
+       "4           4  0.311025                  0.003404  0.179981   \n",
+       "\n",
+       "   % Nati Hawa and Paci Island  % Hispanic or Latino    % male  % married  \\\n",
+       "0                     0.000297              0.024867  0.004729   0.088088   \n",
+       "1                     0.000439              0.034703  0.005782   0.030370   \n",
+       "2                     0.000380              0.022814  0.004493   0.046391   \n",
+       "3                     0.001417              0.030360  0.003700   0.087574   \n",
+       "4                     0.000582              0.029167  0.003886   0.057562   \n",
+       "\n",
+       "   % age 18-29  % age 30-39  ...  % age >=60  % <highschool  median income  \\\n",
+       "0     0.004334     0.010742  ...    0.018941       0.050142       0.014501   \n",
+       "1     0.006006     0.008659  ...    0.028549       0.153190       0.014234   \n",
+       "2     0.005409     0.007128  ...    0.012401       0.054442       0.013475   \n",
+       "3     0.005744     0.013925  ...    0.017146       0.054844       0.013198   \n",
+       "4     0.009107     0.007423  ...    0.011285       0.069788       0.011834   \n",
+       "\n",
+       "   % unemployment  % below poverty line  % food stamp/SNAP  \\\n",
+       "0        0.008568              0.011491           0.055468   \n",
+       "1        0.016159              0.021930           0.119729   \n",
+       "2        0.023643              0.012675           0.094314   \n",
+       "3        0.012265              0.013483           0.072873   \n",
+       "4        0.021366              0.025068           0.095424   \n",
+       "\n",
+       "   median value units built  median year units built  \\\n",
+       "0                  0.138184                 0.006007   \n",
+       "1                  0.070204                 0.006140   \n",
+       "2                  0.133486                 0.005514   \n",
+       "3                  0.145519                 0.005182   \n",
+       "4                  0.113794                 0.006453   \n",
+       "\n",
+       "   % renter-occupied housing units  population density  \n",
+       "0                         0.010586            0.015362  \n",
+       "1                         0.030484            0.014300  \n",
+       "2                         0.028606            0.018284  \n",
+       "3                         0.016203            0.022448  \n",
+       "4                         0.017810            0.009728  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# show the local feature importance\n",
+    "print(df_feature_importance.shape)\n",
+    "df_feature_importance.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0eb94773-3417-4f5d-b882-7f681ffa30a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -145,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
