Description of Parameters

--- a/Notebooks/PyGRF_311request.ipynb
+++ b/Notebooks/PyGRF_311request.ipynb
@@ -53,13 +53,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\PyGRF\\PyGRF.py:343: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  coords['coordinate'] = coords.apply(lambda row: tuple(row), axis=1)\n",
-      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
+      "C:\\software\\anaconda3\\envs\\test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
       " There are 59 disconnected components.\n",
       "  warnings.warn(message)\n"
      ]
@@ -75,7 +69,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\esda\\moran.py:233: RuntimeWarning: invalid value encountered in scalar power\n",
+      "C:\\software\\anaconda3\\envs\\test\\lib\\site-packages\\esda\\moran.py:233: RuntimeWarning: invalid value encountered in scalar power\n",
       "  self.seI_rand = VIR ** (1 / 2.0)\n"
      ]
     }
@@ -109,7 +103,24 @@
    "execution_count": 5,
    "id": "6dae015d-1e7f-4368-87af-ec9f0b9fd6f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fold: 0\n",
+      "fold: 1\n",
+      "fold: 2\n",
+      "fold: 3\n",
+      "fold: 4\n",
+      "fold: 5\n",
+      "fold: 6\n",
+      "fold: 7\n",
+      "fold: 8\n",
+      "fold: 9\n"
+     ]
+    }
+   ],
    "source": [
     "# get columns for only dependent variables\n",
     "columns_to_exclude = ['CBG ID', 'Lon', 'Lat', '311_requests']\n",
@@ -120,7 +131,11 @@
     "df_feature_importance = pd.DataFrame()\n",
     "\n",
     "K_fold = KFold(n_splits=10, shuffle=True, random_state=42)\n",
+    "\n",
+    "i = 0\n",
     "for train_index, test_index in K_fold.split(data_311):\n",
+    "    print(\"fold:\", i)\n",
+    "    \n",
     "    # get the training and test data in each fold\n",
     "    X_train_all, X_test_all = data_311.iloc[train_index], data_311.iloc[test_index]\n",
     "    y_train, y_test = X_train_all['311_requests'], X_test_all['311_requests']\n",
@@ -147,7 +162,9 @@
     "    df_feature_importance = pd.concat([df_feature_importance, local_feature_importance])\n",
     "\n",
     "    y_predict = y_predict + predict_combined\n",
-    "    y_true = y_true + y_test.tolist()"
+    "    y_true = y_true + y_test.tolist()\n",
+    "\n",
+    "    i = i + 1"
    ]
   },
   {
@@ -169,6 +186,14 @@
     "rmse = mean_squared_error(y_true, y_predict, squared=False)\n",
     "r2 = r2_score(y_true, y_predict)\n",
     "print(\"rmse: \" + str(round(rmse, 4)), \"r2: \" + str(round(r2, 4)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2ce3af8-0235-4f58-9748-5911a1d3fb9f",
+   "metadata": {},
+   "source": [
+    "### Examine the obtained local feature importance"
    ]
   },
   {
