--- a/Notebooks/PyGRF_Obesity.ipynb
+++ b/Notebooks/PyGRF_Obesity.ipynb
@@ -53,27 +53,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\PyGRF\\PyGRF.py:343: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  coords['coordinate'] = coords.apply(lambda row: tuple(row), axis=1)\n",
-      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
+      "C:\\software\\anaconda3\\envs\\test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
       " There are 410 disconnected components.\n",
       "  warnings.warn(message)\n",
-      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
+      "C:\\software\\anaconda3\\envs\\test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
       " There are 16 disconnected components.\n",
       "  warnings.warn(message)\n",
-      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
+      "C:\\software\\anaconda3\\envs\\test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
       " There are 4 disconnected components.\n",
       "  warnings.warn(message)\n",
-      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
+      "C:\\software\\anaconda3\\envs\\test\\lib\\site-packages\\libpysal\\weights\\weights.py:224: UserWarning: The weights matrix is not fully connected: \n",
       " There are 2 disconnected components.\n",
       "  warnings.warn(message)\n",
-      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\esda\\moran.py:220: RuntimeWarning: invalid value encountered in scalar power\n",
+      "C:\\software\\anaconda3\\envs\\test\\lib\\site-packages\\esda\\moran.py:220: RuntimeWarning: invalid value encountered in scalar power\n",
       "  self.seI_norm = self.VI_norm ** (1 / 2.0)\n",
-      "C:\\software\\anaconda3\\envs\\Test\\lib\\site-packages\\esda\\moran.py:233: RuntimeWarning: invalid value encountered in scalar power\n",
+      "C:\\software\\anaconda3\\envs\\test\\lib\\site-packages\\esda\\moran.py:233: RuntimeWarning: invalid value encountered in scalar power\n",
       "  self.seI_rand = VIR ** (1 / 2.0)\n"
      ]
     },
@@ -99,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7422e41e-ea44-4fda-a958-2133ee7db5e0",
    "metadata": {},
    "outputs": [],
@@ -111,10 +105,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "45acdf29-64eb-457a-91d7-f8f33e05aea8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fold: 0\n",
+      "fold: 1\n",
+      "fold: 2\n",
+      "fold: 3\n",
+      "fold: 4\n",
+      "fold: 5\n",
+      "fold: 6\n",
+      "fold: 7\n",
+      "fold: 8\n",
+      "fold: 9\n"
+     ]
+    }
+   ],
    "source": [
     "# get columns for only dependent variables\n",
     "columns_to_exclude = ['Census tract code', 'Lon', 'Lat', 'obesity rate']\n",
@@ -125,7 +136,11 @@
     "df_feature_importance = pd.DataFrame()\n",
     "\n",
     "K_fold = KFold(n_splits=10, shuffle=True, random_state=42)\n",
+    "\n",
+    "i = 0\n",
     "for train_index, test_index in K_fold.split(data_obesity):\n",
+    "    print(\"fold:\", i)\n",
+    "    \n",
     "    # get the training and test data in each fold\n",
     "    X_train_all, X_test_all = data_obesity.iloc[train_index], data_obesity.iloc[test_index]\n",
     "    y_train, y_test = X_train_all['obesity rate'], X_test_all['obesity rate']\n",
@@ -152,12 +167,14 @@
     "    df_feature_importance = pd.concat([df_feature_importance, local_feature_importance])\n",
     "\n",
     "    y_predict = y_predict + predict_combined\n",
-    "    y_true = y_true + y_test.tolist()"
+    "    y_true = y_true + y_test.tolist()\n",
+    "\n",
+    "    i = i + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ef80d05c-bb1c-4cdc-baad-962359e87f1b",
    "metadata": {},
    "outputs": [
@@ -177,8 +194,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e0389f1-2b72-42d4-a1f8-69c46f44d37e",
+   "metadata": {},
+   "source": [
+    "### Examine the obtained local feature importance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "38e2a541-2ac9-438c-9cad-50b31d3500a6",
    "metadata": {},
    "outputs": [
@@ -405,7 +430,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
